--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Sleepy</h1>
+<p>Specify wake time or go with knockout!</p>
 
 <%= form_tag("home/output", :method => "get") do %>
-  <%= label_tag(:hour, "hour:") %>
-  <%= text_field_tag(:hour) %>
-  <%= label_tag(:minute, "minute:") %>
-  <%= text_field_tag(:minute) %>
-  <%= submit_tag("calculate") %>
-  <%= submit_tag("zzz") %>
+  <%= text_field_tag :hour, nil, :class => "span1", :placeholder => "hour" %>
+  <%= text_field_tag :minute, nil, :class => "span1", :placeholder => "minute" %>
+  <br>
+  <%= submit_tag "calculate", :class => "btn btn-primary btn-large" %>
+  <%= submit_tag "zzz", :class => "btn btn-info btn-mini" %>
 <% end %>
