--- a/app/views/home/_result.html.erb
+++ b/app/views/home/_result.html.erb
@@ -1,4 +1,3 @@
-<h1>Sleepy</h1>
 <p>
 <% i = 0 %>
 <% if @wake_result %>
@@ -20,4 +19,4 @@
 	<% reset_cycle("bold") %>
 <% end %>
 </p>
-<%= button_to 'Back', :back, :class => "btn btn-large btn-success" %>
+<%= button_to 'Back', home_clean_path, :remote => :true, :class => "btn btn-large btn-success"%>
