Add animated AJAX and minor refactoring

--- a/app/views/home/output.html.erb
+++ b/app/views/home/output.html.erb
@@ -1,23 +1,4 @@
 <h1>Sleepy</h1>
-<p>
-<% i = 0 %>
-<% if @wake_result %>
-<em>Try to wake-up at times:</em><br>
-	<% @wake_result.each do |f| %>
-	<span style="color:<%= cycle("#6EA25A", "#6EA25A", "#E89B34", "#E89B34", "#B24A3C", "#B24A3C", :name => "colors") %>">
-		<%= f.strftime("%H:%M") %> ..
-		</span>
-	<% end %>
-	<% reset_cycle("colors") %>
-<% else %>
-<em>Go to sleep at:</em><br>
-	<% @sleep_result.each do |f| %>
-		<span style="color:<%= cycle("#6EA25A", "#6EA25A", "#E89B34", "#E89B34", "#B24A3C", "#B24A3C", :name => "colors") -%>">
-		<%= f.strftime("%H:%M") %> ..
-		</span>
-	<% end %>
-	<% reset_cycle("colors") %>
-	<% reset_cycle("bold") %>
-<% end %>
-</p>
-<%= button_to 'Back', :back, :class => "btn btn-large btn-success" %>
+<div id="main">
+	<%= render :partial => "result" %>
+</div>
