--- a/app/views/home/output.js.erb
+++ b/app/views/home/output.js.erb
@@ -1,1 +1,3 @@
-$('#main').html("<%= escape_javascript(render('result')) %>");
+$(function() {
+  $('#main').html("<%= escape_javascript(render('result')) %>").hide().fadeIn(100);
+});
