--- a/app/views/home/clean.js.erb
+++ b/app/views/home/clean.js.erb
@@ -1,1 +1,3 @@
-$('#main').html("<%= escape_javascript(render('options')) %>");
+$(function() {
+  $('#main').html("<%= escape_javascript(render('options')) %>").effect("bounce", { times:1, direction: "up", distance:10 }, 500);
+});
